--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "iconv-lite": "^0.4.17",
     "meteor-node-stubs": "^0.2.6",
     "moment": "^2.18.1",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-addons-pure-render-mixin": "^15.5.2",
     "react-dom": "^15.5.4",
